--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -8,6 +8,13 @@
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+@article{Mitchell1980,
+	author = {Tom Mitchell},
+	date-added = {2024-03-06 18:47:13 -0700},
+	date-modified = {2024-03-06 18:52:30 -0700},
+	title = {The Need for Biases in Learning Generalizations},
+	year = {1980}}
+
 
 @article{Kasirzadeh2024WIP,
 	author = {Atoosa Kasirzadeh},
