--- a/main.tex
+++ b/main.tex
@@ -146,7 +146,7 @@
 \begin{itemize}
     \item \textbf{Large Language Models.}  I swear I will \textbf{not} use LLMs to summarize literature, write text for my papers, or to help construct ``novel'' arguments or substitute for my own effort and cognition in any way. Any use will be purely for research purposes of what they are capable of. 
     \item \textbf{Transparent Research.}  I can and will use Git version control for my projects, and host them in GitHub repositories for transparency.  (See e.g. \href{https://github.com/CameronBeebe/Structural_Idealism}{Structural Idealism Project}.) 
-    \item \textbf{Networking.} I spent almost a decade associated with the Munich Center for Mathematical Philosophy.  I am also working on a project as an external member.  I also created The SciPhi Initiative, LLC, and have used this organization for tutoring and outreach.  I will continue to use social media, primarily those where tech and AI industry experts are also present, to engage with respect to research and ethics goals.
+    \item \textbf{Networking.} I spent almost a decade associated with the Munich Center for Mathematical Philosophy.  I am also working on a project in philosophy of physics as an external member.  I created The SciPhi Initiative, LLC, and have used this organization for tutoring and outreach.  I will continue to use social media, primarily those where tech and AI industry experts are also present, to engage with respect to research and ethics goals.
     \item \textbf{Interdisciplinary.}  I value very much interdisciplinary collaboration, and this has been a major characteristic of my previous academic experience at the Munich Center for Mathematical Philosophy and Graduate School of Systemic Neurosciences.
     \item \textbf{Inclusive.}  I want to discuss diverse points of view on these topics.  See e.g. the convincing arguments from John Stuart Mill's \emph{On Liberty} for considering in particular voices less heard.
     \item \textbf{Belief Revision.}  I will revise my beliefs and research goals as compelling new information is presented to me, within the scope of the project.
@@ -167,11 +167,25 @@
 
 \subsection{AI Nudges}
 
-We have some idea now, after more than a decade of widespread social media use by humans, how populations might be affected by algorithmic content pushing.  Feedback loops provide information to social media companies to adjust their algorithms with the aim of keeping users neurochemically hooked and coming back for more content, hoping to serve more ads.  Supercomputers are employed in order to do large amounts of mathematics (e.g. matrix multiplication, chain rule) in the optimization process.
+After more than a decade of widespread social media use, we now have some idea how populations of humans can be affected by algorithmic content pushing.  The algorithms are driven by feedback loops on an industrial scale.  Supercomputers (petascale and, now, exascale) are employed in order to do large amounts of mathematics (conventionally matrix multiplication on forward passes and the chain rule backpropagating feedback signals) in the optimization process.  The information contained in the reinforcing signals from large populations of human consumption allows social media companies to adjust their algorithms, and make them more optimal with respect to the goal of keeping users neurochemically hooked and coming back for more content, and to serve more ads.  
+
+Increasingly, however, social media companies are ostensibly trying to introduce what I think can be appropriately called \emph{nudges}, in consistent terminological usage with the theory of nudging as put forth in Sunstein et al.  The overwhelming criticism and pushback these companies receive when hateful content or misinformation is algorithmically pushed is almost universal.  Facebook, for example, has employed \emph{tens of thousands} of employees to try to manually flag and determine what should or should not be pushed, in what seems an obvious attempt to create a labeled dataset to train algorithmic content moderation models.
+
+My understanding of nudging which I think seems fair goes something like this: when all fair choices are presented to an agent (including the ``right'' choice according to some economic or political theory) the probability of the specific (theory-desired) choice might increase at the population level.  This is called ``choice architecture'', and I take it to be an ideal formulation like other theoretical frameworks in economics or related sciences.  
+
+One problem with algorithmically implementing such an idea is not just that the programmers of the algorithm may have implicit bias (which may or may not agree with the user's implicit bias).  This would, for example, affect the space of choices in certain ways.  However, a much more problematic issue I take to be that users are already in a vulnerable state, being targeted for their attention via the content optimization loop, and therefore susceptible to two kinds of cognitive responses.  
+
+\noindent\textbf{Positive:} \emph{uncritically believing in the implicit biases of the choice architects as a worldview, which we can perhaps view as a form of confirmation bias}.
+
+\noindent\textbf{Negative:} \emph{believing that the choice architects are maliciously projecting their world view (which clashes with the user's)}
+
+[nonsense?]
+
+I would compare this to 
 
 With the advent and widespread availability and use of generative large language models, there is now a new optimization loop which reinforces through human feedback a different class of models.  These models aren't necessarily optimized in order to serve content, but to create linguistic content that satisfies in some way a population of human users.  Supercomputers are dedicated to training and improving these models, and also to serve artificial linguistic content to large populations of humans.
 
-There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance (or even remove the bias totally, which under this understanding [SOURCE] is not particularly plausible) bias, which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  
+There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \citep{Mitchell1980}, is not particularly plausible), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  
 
 Even if everyone agreed on criteria for an ``unbiased'' model, and everyone agreed to use it, there are fundamental epistemological limitations about whether we will be able to understand when the models are hallucinating or nudging in nuanced ways that affect influential actors in society, which in turn affect the trajectory of science or politics in our civilization.
 
@@ -209,6 +223,12 @@ Of course, humans are not perfect, and make many of the same mistakes.  Then the
 
 % But, what about silicon hardware implementing linear algebra circuits? [DOES THAT MAKE SENSE?]
 
+
+\subsection{The Viability of Watermarking}
+
+On the issue of a polluted epistemological landscape, will we have to rely on AI tools just to know what is real?  Is there a method, such as watermarking, which could not just be required but actually adhered to?
+
+I think the possibility of reliable and ubiquitous watermarking is extremely unlikely to happen.
 
 
 \subsection{Scaling and the VC Dimension}
@@ -671,6 +691,18 @@ Weekly Neurophilosophy seminars, Machine Epistemology (Wheeler), Rationality (Ro
 
 I have the most experience with python and associated packages and tools.  I have used jupyter notebooks, pandas, scikit-learn, keras (and some tensorflow through tf.keras), and other related packages.  Before I got into python I also used Netlogo (a language specialized for agent based modeling and visualization), some octave and matlab, and I am comfortable working through the command line on linux/unix terminals.  In general, I am able to read and write code and learn new syntax if I have to.  
 
+\section{Real World Data Experience}
+
+For the last year and a half I have been working at a cultivation facility start up in Nederland, Colorado.  As we are a small team, most of us do everything.
+
+\begin{multicols}{2}
+\begin{itemize}
+    \item \textbf{Measurement and Recording}: PH; total dissolved solids (tds) or parts per million (ppm); water temperature; room humidity and temperatures; nutrient solution amounts; plant waste weight; 
+    \item \textbf{Calibration}: PH and TDS measurement devices.
+    \item \textbf{Measurement:} 
+    \item \textbf{Preparation:} Mixing nutrients
+\end{itemize}
+\end{multicols}
 
 \section{Other Experience}
 
