--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -25,14 +25,14 @@
 	year = {2024}}
 
 
-
-
-@article{Mitchell1980,
-	author = {Tom Mitchell},
-	date-added = {2024-03-06 18:47:13 -0700},
-	date-modified = {2024-03-06 18:52:30 -0700},
-	title = {The Need for Biases in Learning Generalizations},
-	year = {1980}}
+@book{Carnap1966,
+	author = {Rudolf Carnap},
+	date-added = {2024-02-27 09:49:56 -0700},
+	date-modified = {2024-02-27 09:51:34 -0700},
+	editor = {Martin Gardner},
+	publisher = {Basic Books, Inc.},
+	title = {Philosophical Foundations of Physics},
+	year = {1966}}
 
 
 @book{KantProlegomena,
