--- a/main.tex
+++ b/main.tex
@@ -160,56 +160,23 @@
 
 
 
-\section{Potential Projects}
+\section{Two Main Projects}
 
 
+\subsection{Machine Epistemology and Ramsey Sentences}
 
+Is it possible that an AI model could learn a different structural representation of the world compared to a typical human biological neural net, and we won’t be able to tell?  If we are going to use artificial generative models in science, what is the epistemological character of apparently new scientific information which is derived from such models?  Assuming it is plausible to suppose some kind of a divide between empirical and theoretical terms, can new information derived from generative AI ever go beyond what philosophers of science call \emph{empirical structural realism}?
 
-\subsection{AI Nudges}
+A neural network model can learn "empirical" laws which generalize the model's ``environment''.  We can say that the model learns an effective bias. That environment is not the same as the one humans like you and I inhabit.   We might suppose, however, that the training data encodes sufficient similarities to our own world.  Sufficient for the model to learn essentially isomorphic empirical laws to our own reality.
 
-After more than a decade of widespread social media use, we now have some idea how populations of humans can be affected by algorithmic content pushing.  The algorithms are driven by feedback loops on an industrial scale.  Supercomputers (petascale and, now, exascale) are employed in order to do large amounts of mathematics (conventionally matrix multiplication on forward passes and the chain rule backpropagating feedback signals) in the optimization process.  The information contained in the reinforcing signals from large populations of human consumption allows social media companies to adjust their algorithms, and make them more optimal with respect to the goal of keeping users neurochemically hooked and coming back for more content, and to serve more ads.  
+A major follow up question is whether the model can learn the same or new \emph{theoretical} laws to our own.  In our explanations of the world we use theoretical laws, which can include potentially non-observable theoretical terms.  They are essential to our cognition of the world.  I think it is extremely unclear whether we should expect current AI models to truly learn anything like our theoretical laws (although they might mimic quite well or be pre-prompted to give the illusion that they understand them).  
 
-Increasingly, however, social media companies are ostensibly trying to introduce what I think can be appropriately called \emph{nudges}, in consistent terminological usage with the theory of nudging as put forth in Sunstein et al.  The overwhelming criticism and pushback these companies receive when hateful content or misinformation is algorithmically pushed is almost universal.  Facebook, for example, has employed \emph{tens of thousands} of employees to try to manually flag and determine what should or should not be pushed, in what seems an obvious attempt to create a labeled dataset to train algorithmic content moderation models.
+To truly ``learn'' theoretical laws from scratch, what would the training data need to look like, and how do mechanisms in the model "digest" the data?  If we found something which looked like a new theoretical law in the architecture or output of a model, how would we evaluate it?  What tests could we do to find out whether a model has learned different theoretical laws from our own, or new ones?  Would it matter, if the empirical laws remained isomorphic?
 
-My understanding of nudging which I think seems fair goes something like this: when all fair choices are presented to an agent (including the ``right'' choice according to some economic or political theory) the probability of the specific (theory-desired) choice might increase at the population level.  This is called ``choice architecture'', and I take it to be an ideal formulation like other theoretical frameworks in economics or related sciences.  
+Ramsey sentences attempt to do without theoretical terms, so perhaps we could coordinate the machine's epistemology with our own through such a formalization.  
 
-One problem with algorithmically implementing such an idea is not just that the programmers of the algorithm may have implicit bias (which may or may not agree with the user's implicit bias).  This would, for example, affect the space of choices in certain ways.  However, a much more problematic issue I take to be that users are already in a vulnerable state, being targeted for their attention via the content optimization loop, and therefore susceptible to two kinds of cognitive responses.  
+See e.g. \citep[\S 26]{Carnap1966} 
 
-\noindent\textbf{Positive:} \emph{uncritically believing in the implicit biases of the choice architects as a worldview, which we can perhaps view as a form of confirmation bias}.
-
-\noindent\textbf{Negative:} \emph{believing that the choice architects are maliciously projecting their world view (which clashes with the user's)}
-
-[nonsense?]
-
-I would compare this to 
-
-With the advent and widespread availability and use of generative large language models, there is now a new optimization loop which reinforces through human feedback a different class of models.  These models aren't necessarily optimized in order to serve content, but to create linguistic content that satisfies in some way a population of human users.  Supercomputers are dedicated to training and improving these models, and also to serve artificial linguistic content to large populations of humans.
-
-There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \citep{Mitchell1980}, is not particularly plausible), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  
-
-Even if everyone agreed on criteria for an ``unbiased'' model, and everyone agreed to use it, there are fundamental epistemological limitations about whether we will be able to understand when the models are hallucinating or nudging in nuanced ways that affect influential actors in society, which in turn affect the trajectory of science or politics in our civilization.
-
-Also, if these models are based on human data with questionable privacy protections in the first place, nudges from such a model arguably represent a potential further privacy intervention on distilled data from the population.
-
-\textbf{Important Literature:} Nudging (E.g. Sunstein and Thaler, Kapsner and Sandfuchs, )
-
-\subsection{Where are we going?}
-
-Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  There might be ``peaks'' and ``valleys'' in this space, which represent the grain or currents that characterize in summary things like incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.
-
-\noindent\textbf{What effect might widespread AI nudges have on this trajectory?}
-
-In a preprint manuscript, Atoosa Kasirzadeh makes a very similar and related point she calls the \emph{accumulative} risk of AI. \citep{Kasirzadeh2024WIP}  I would argue that central to this accumulative risk is the relationship populations of humans have to widely available generative artificial systems.  Small mistakes and misuses can add up: 
-
-\begin{itemize}
-    \item bugs in automatically generated code
-    \item relying on generated summaries of articles never read
-    \item using generated text in scientific articles
-    \item using them to influence ``novel'' scientific theory or results at the fringe of a particular scientist's understanding or, worse, 
-    \item at the fringe of a majority of a field's understanding---in which case, an error may persist for quite some time
-\end{itemize}
-
-Of course, humans are not perfect, and make many of the same mistakes.  Then the epistemological responsibility is still on the humans and their values, rather than dependent on an external and mysterious artificial system.
 
 % \subsection{Relating Learned Structures to Real Structures}
 
@@ -222,6 +189,114 @@ Of course, humans are not perfect, and make many of the same mistakes.  Then the
 % This is taking the ontology and epistemology of these systems very seriously, just as we would with other creatures. We seem to be able to specify, with a fairly convincing degree of justification, what the environmental data would be like for ants.  
 
 % But, what about silicon hardware implementing linear algebra circuits? [DOES THAT MAKE SENSE?]
+
+\subsection{A Methodology for Generative Confounds and the Trajectory of Science}
+
+%After more than a decade of widespread social media use, we now have some idea how populations of humans can be affected by algorithmic content pushing.  The algorithms are driven by feedback loops on an industrial scale.  Supercomputers (petascale and, now, exascale) are employed in order to do large amounts of mathematics (conventionally matrix multiplication on forward passes and the chain rule backpropagating feedback signals) in the optimization process.  The information contained in the reinforcing signals from large populations of human consumption allows social media companies to adjust their algorithms, and make them more optimal with respect to the goal of keeping users neurochemically hooked and coming back for more content, and to serve more ads.  
+
+%Increasingly, however, social media companies are ostensibly trying to introduce what I think can be appropriately called \emph{nudges}, in consistent terminological usage with the theory of nudging as put forth in Sunstein et al.  The overwhelming criticism and pushback these companies receive when hateful content or misinformation is algorithmically pushed is almost universal.  Facebook, for example, has employed \emph{tens of thousands} of employees to try to manually flag and determine what should or should not be pushed, in what seems an obvious attempt to create a labeled dataset to train algorithmic content moderation models.
+
+%My understanding of nudging which I think seems fair goes something like this: when all fair choices are presented to an agent (including the ``right'' choice according to some economic or political theory) the probability of the specific (theory-desired) choice might increase at the population level.  This is called ``choice architecture'', and I take it to be an ideal formulation like other theoretical frameworks in economics or related sciences.  
+
+%One problem with algorithmically implementing such an idea is not just that the programmers of the algorithm may have implicit bias (which may or may not agree with the user's implicit bias).  This would, for example, affect the space of choices in certain ways.  However, a much more problematic issue I take to be that users are already in a vulnerable state, being targeted for their attention via the content optimization loop, and therefore susceptible to two kinds of cognitive responses.  
+
+%\noindent\textbf{Positive:} \emph{uncritically believing in the implicit biases of the choice architects as a worldview, which we can perhaps view as a form of confirmation bias}.
+
+%\noindent\textbf{Negative:} \emph{believing that the choice architects are maliciously projecting their world view (which clashes with the user's)}
+
+%[nonsense?]
+
+%I would compare this to 
+
+There are many examples of beneficial uses and properly applied machine learning and artificial intelligence techniques in science.  [EXAMPLES: Predicting turbulent flow, protein structures, ]  It even seems uncontroversial that some of these models can indeed produce new knowledge.  [CITE FUNSEARCH]  The FunSearch results even arguably provide a form of explanation that philosophers of science might recognize.  Previously, I have argued that explanations must be able to intersubjectively transfer the capacity to control.  In the case of FunSearch, the mathematical result which was obtained was at least communicable in the form of a (low $K$ complexity!) program. The mathematical results are impressive, especially if they transfer to other areas of computation and mathematics (e.g. perhaps learning compact low $K$ representations of trained models) but arguably a long way to go from there to new theories and mechanistic explanations in other areas of science.  
+
+\begin{quote}
+    What’s more, this interpretability of FunSearch’s programs can provide actionable insights to researchers. As we used FunSearch we noticed, for example, intriguing symmetries in the code of some of its high-scoring outputs. This gave us a new insight into the problem, and we used this insight to refine the problem introduced to FunSearch, resulting in even better solutions. We see this as an exemplar for a collaborative procedure between humans and FunSearch across many problems in mathematics.
+
+    [CITE]
+\end{quote}
+
+This is a dialectical relationship to an AI model, which is arguably lacking from the current typical use of widespread models like ChatGPT, which seem to be used more like authoritative Oracles.
+
+The authors note that when FunSearch discovered a much better solution to bin packing compared to traditional heuristics, is easy to check and verify that it is indeed better.  This is exactly like the traditional framing in computational complexity theory, but \emph{what are the complexity requirements for testing scientific claims from generative models?}  Assuming we can determine the claims \emph{are testable}.  For example, claims concerning fundamental physics seem likely to require much more resources than claims about material science.
+
+I think philosophers should take great interest in this novel result, and I argue that we can understand such a result stemming from \emph{dialectical} features of the models.  Novel dialectical architectures should be pursued not just for the potential for justifiability and explainability of alleged new scientific knowledge, but also for reasons of trust and convergence.  Perhaps most importantly, however, I argue that a dialectical architecture has the potential to improve the layman's individual use of generative models.  Rather than LLMs being treated like Oracles, they should be interacted with as if they were \emph{philosophical interlocutors}.  
+
+The epistemological relationship is beneficial because it facilitates critical thinking methods like the Socratic method, rather than a dependency on something akin to confabulatory divination.  
+
+One example of what I would classify as a dialectical model is what is known as an adversarial model. Adversarial models in the past (e.g. Generative Adversarial Models, or GANs) relied on a neural network architecture which pitted one ``sub-network'' against another.  One was typically called a Generator, and a Discriminator.  This can be used for example to learn an image model that reproduces images close to a training set.  The whole system functions in an iterative loop, such that a Generator tries to fool the Discriminator, and the information of ``failure-to-fool'' is fed back to improve the Generator.  The back-and-forth tension is a reliable feedback loop mechanism.
+
+I think that we should explore other forms of architecture for dialectical models, in which the internal ``competition'' among sub-nets is composed differently, and not necessarily competitive or describable as ``fooling''.  Rather, sub-nets try to compose the best argument, and other sub-nets try to poke holes.  Importantly, as similar to the communicability part of FunSearch, such artificial systems should \emph{transparently display the dialectic between ``adversarial'' sub-nets}.  
+
+Hierarchical dialectical models represents a potentially novel architecture which I would expect to find in a successful AGI candidate.  If we are going to have AGI, we should try to engineer an architecture which not only out-competes available alternatives, but does so in a theoretically responsible way.  Naturally, what I am describing represents many potential open problems in need of solution, and I am merely speculating that (open source) development on HDMs would be more responsible than other approaches being developed in the open or in secret.  There is the possibility that AGI is dangerous no matter the architecture, and I find it likely we will have multiple competing models.
+
+I was not the first to note the similar structure of a GAN with the philosophical notion of a dialectic.  [CITE ]
+
+%So, on Oracular calls to the composed network, a dialectic is displayed.  Additionally, one should be able to call upon a ``committee'', and the function of the model is not general but specific to a critical methodology.  
+
+
+
+
+
+
+However, for quite some time now, I have been concerned with what I would call \emph{systemic confounds} from generative AI models.  These confounds are present in the results shown from popular search engines, for example ChatGPT output text copied and pasted onto popular forums like StackOverflow and Reddit, and shown by Google search.  This is the obvious ``pollution'' confound, but I believe there are much more important confounds from generative models we should focus on for the methodology of science.
+
+
+
+Social media content optimization algorithms have for some time now affected large populations of humans.  Even small changes in content, distributed widely, are expected to potentially affect the views of individuals within the population.  I think it is fair to consider in a similar context a new class of public-facing \emph{generative} algorithms.  The most widely known is OpenAI's large language model (LLM) called ChatGPT.
+
+With the advent and widespread availability and use of generative LLMs, there is now a new optimization loop which reinforces through human feedback a different class of models.  These models aren't necessarily optimized in order to serve content, but to create linguistic content that satisfies in some way a population of human users.  A computation arms race is rapidly increasing the dedicated and specialized compute to training and improving these models, and also to serve artificial linguistic content to large populations of humans.
+
+
+
+
+
+
+
+
+Consider a phase space, in which each point represents the total state of every human with agency, and every relevant factor of human civilization.  This complex system has, and will have, a \emph{trajectory} in phase space.  There might be ``peaks'' and ``valleys'' in this space, which represent the grain or currents that characterize in summary things like incentives and disincentives, positive and negative feedback loops, and structural constraints in the world of the system.
+
+
+
+In a preprint manuscript, Atoosa Kasirzadeh makes a very similar and related point she calls the \emph{accumulative} risk of AI. \citep{Kasirzadeh2024WIP}  It seems to me that central to this accumulative risk is the relationship populations of humans have to widely available generative artificial systems.  Small mistakes and misuses can add up: 
+
+\begin{itemize}
+    \item bugs in automatically generated code
+    \item relying on generated summaries of articles never read
+    \item using generated text in scientific articles
+    \item using them to influence ``novel'' scientific theory or results at the fringe of a particular scientist's understanding or, worse, 
+    \item at the fringe of a majority of a field's understanding---in which case, an error may persist for quite some time
+\end{itemize}
+
+So, if we want to foster \emph{resilience}, it seems to me that we need to focus on making resilient individuals, since they are presumably the smallest ``unit'' or subsystem relevant to the coherent functioning of an interconnected global complex system.  The more resilient individuals, the more robust will be larger subsystems like local organizations and municipalities.
+
+Furthermore, it seems obvious that some networks of individuals (and associated institutions) are more influential and capable of being robust.  Namely, scientific networks and institutions.  These are the networks with individuals most likely to have developed critical thinking skills able to resist poor usage of AI models.  Unfortunately, the current trend looks poor, as scientists (with certain incentives) appear to be among the first and most frequent users of novel AI models, in particular generative language models.
+
+What philosophical views do scientists and developers have, and what epistemological assumptions do they make about AI models?  When one reads, for example, the scientific treatises of some of the smartest people of the twentieth century, there is an astonishing amount of philosophical sophistication.  Much of this has to do with the educational system in Germany and Austria.  But the point is that \emph{it is popular for scientists to forego the philosophy in favor of results and publication}.  The incentives make it so.
+
+Atoosa also suggests simulations and modeling of the complex global system, which I wholeheartedly endorse and would like to explore as well.  
+
+
+
+
+\section{Potential Related Projects}
+
+\subsection{AI Nudges}
+
+\noindent\textbf{What effect might widespread AI nudges have on the trajectory of civilization?}
+
+%Also, if these models are based on human data with questionable privacy protections in the first place, nudges from such a model arguably represent a potential further privacy intervention on distilled data from the population.
+
+Of course, humans are not perfect, and make many of the same mistakes.  Then the epistemological responsibility is still on the humans and their values, rather than dependent on an external and mysterious artificial system.
+
+\textbf{Important Literature:} Nudging (E.g. Sunstein and Thaler, Kapsner and Sandfuchs, )
+
+
+\subsection{Focus on Bias}
+
+There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \citep{Mitchell1980}, is not particularly plausible), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  
+
+Even if everyone agreed on criteria for an ``unbiased'' model, and everyone agreed to use it, there are fundamental epistemological limitations about whether we will be able to understand when the models are confabulating or nudging in nuanced ways that affect influential actors in society, which in turn affect the trajectory of science or politics in our civilization.
 
 
 \subsection{The Viability of Watermarking}
@@ -253,6 +328,24 @@ While much of this seems obvious to me after a great deal of thought the last fe
 \textbf{POTENTIAL CRITICISM}: One can ask current models to simulate a dialectic, or just fine tune on philosophical dialogue texts, so would we really need some new architecture for specifically dialectical models?
 
 \textbf{POTENTIAL RESPONSE}: There is no free lunch.  \cite{Wolpertetal1997}  Effective models learn bias.  \cite{Mitchell1980}  Maybe even some computational efficiency to go down the route of a cluster of adversarial and biased models.  They might also be able to be distributed better on compute devices. 
+
+
+
+
+\subsection{Ethical LLM Usage in Science}
+
+We need to develop checks and balances, proper-use directives, and standard operating procedures for the use of generative language models in science.
+
+Discussing a recent interesting case of a student who (mis-)used LLM models in their work\footnote{\href{https://twitter.com/BeebsMemes/status/1759282741680443600}{Post on X}}:
+
+Perhaps using translation specific language models should be allowed under certain guidelines, especially ones vetted and known to be robust by scientific administrators. So students can write in their comfortable native tongue… and there would be less likelihood of spurious or incoherent content being introduced into the academic process.
+
+But this sidesteps the more fundamental  issue which is that critical thinking skills in human neural nets are atrophying as people become dependent.  I think this student should \emph{not} have used the LLM to rewrite anything, especially if it was something they were unsure about in a second language to begin with. 
+
+As long as there was an affidavit of human authorship, and/or affidavit of translation only (e.g. according to model and version \#), I think it would have been an arguably okay use of AI tools for academic work. But anything above translation gets very suspect, for reasons having to do with the human values of science and the goal to train critical human thinkers in academia.
+
+There is a new and extremely dominant influence in academia, and incentives to empower that influence will lead to outcomes inconsistent with the purpose of higher education if we don’t start figuring out healthy ways to use the technology.
+
 
 
 \subsection{Consulting AI Oracles}
