Major overhaul, reduction in scope and potential side projects, organization

--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -35,6 +35,67 @@
 	year = {1966}}
 
 
+
+
+
+@book{OnLiberty1859,
+	author = {John Stuart Mill},
+	date-added = {2024-03-17 14:32:28 -0600},
+	date-modified = {2024-03-17 14:34:16 -0600},
+	title = {On Liberty},
+	year = {1859}}
+
+
+
+@InCollection{sep-hegel-dialectics,
+	author       =	{Maybee, Julie E.},
+	title        =	{{Hegel’s Dialectics}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2020/entries/hegel-dialectics/}},
+	year         =	{2020},
+	edition      =	{{W}inter 2020},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+
+@misc{HFMOE,
+    author = {Omar Sanseviero and
+                     Lewis Tunstall and
+                     Philipp Schmid and
+                     Sourab Mangrulkar and
+                     Younes Belkada and
+                     Pedro Cuenca
+                   },
+    title = { Mixture of Experts Explained },
+    year = 2023,
+    url = { https://huggingface.co/blog/moe },
+    publisher = { Hugging Face Blog }
+}
+
+
+
+@article{FunSearch2024,
+	abstract = {Large language models (LLMs) have demonstrated tremendous capabilities in solving complex tasks, from quantitative reasoning to understanding natural language. However, LLMs sometimes suffer from confabulations (or hallucinations), which can result in them making plausible but incorrect statements1,2. This hinders the use of current large models in scientific discovery. Here we introduce FunSearch (short for searching in the function space), an evolutionary procedure based on pairing a pretrained LLM with a systematic evaluator. We demonstrate the effectiveness of this approach to surpass the best-known results in important problems, pushing the boundary of existing LLM-based approaches3. Applying FunSearch to a central problem in extremal combinatorics---the cap set problem---we discover new constructions of large cap sets going beyond the best-known ones, both in finite dimensional and asymptotic cases. This shows that it is possible to make discoveries for established open problems using LLMs. We showcase the generality of FunSearch by applying it to an algorithmic problem, online bin packing, finding new heuristics that improve on widely used baselines. In contrast to most computer search approaches, FunSearch searches for programs that describe how to solve a problem, rather than what the solution is. Beyond being an effective and scalable strategy, discovered programs tend to be more interpretable than raw solutions, enabling feedback loops between domain experts and FunSearch, and the deployment of such programs in real-world applications.},
+	author = {Romera-Paredes, Bernardino and Barekatain, Mohammadamin and Novikov, Alexander and Balog, Matej and Kumar, M. Pawan and Dupont, Emilien and Ruiz, Francisco J. R. and Ellenberg, Jordan S. and Wang, Pengming and Fawzi, Omar and Kohli, Pushmeet and Fawzi, Alhussein},
+	da = {2024/01/01},
+	date-added = {2024-03-17 13:50:40 -0600},
+	date-modified = {2024-03-17 13:52:28 -0600},
+	doi = {10.1038/s41586-023-06924-6},
+	id = {Romera-Paredes2024},
+	isbn = {1476-4687},
+	journal = {Nature},
+	number = {7995},
+	pages = {468--475},
+	title = {Mathematical discoveries from program search with large language models},
+	ty = {JOUR},
+	url = {https://doi.org/10.1038/s41586-023-06924-6},
+	volume = {625},
+	year = {2024},
+	Bdsk-Url-1 = {https://doi.org/10.1038/s41586-023-06924-6}}
+
+
+
 @book{KantProlegomena,
 	author = {Immanuel Kant},
 	date-added = {2024-03-03 20:57:37 -0700},
