--- a/main.tex
+++ b/main.tex
@@ -124,7 +124,7 @@
 
 \setcounter{secnumdepth}{-2}
 
-\title{Generative AI in Science: \\ Research Plan and Experience}
+\title{Generative AI in Scientific Discovery: \\ Research Plan and Experience}
 \author{Cameron Beebe, Ph.D.}
 %\date{}							% Activate to display a given date or no date
 
@@ -134,7 +134,21 @@
 %\subsection{}
 
 
+\abstract{
 
+This research plan proposes to philosophically address and contextualize the current (and perhaps future) capability of generative artificial intelligence with respect to scientific discovery.  In particular, while acknowledging limited successes, I would like to focus on potential problems and limits to the use of generative models for scientific discovery.  Following the brief outline of the topics I will work on, I also lay out a proposed methodology and summarize my background which is suitable for successful research and publication on this topic.
+
+I begin by introducing recent ideas from Atoosa Kasirzadeh on accumulative risk as a starting point for conceptualizing the current state of AI in our civilization using complex systems theory.  I agree with her arguments, and consider that at the level of the individual, as well as the sub-systems of scientific networks, are the components of the global complex system most crucial to avoid accumulative risk in.  
+
+With respect to the generative AI models themselves, I think philosophers should pay particular attention to what can be called \emph{dialectical architectures.}  There are strong reasons that such architectures may be able to meaningfully mitigate some of the widely acknowledged issues (e.g. bias, confabulation or hallucination, explainability and interpretability). In turn, mitigating these low level issues may also mitigate accumulative risk in the individual and scientific network components of AI use in our civilization.  
+
+% Perhaps they can also help to encourage non-Oracle use of these models as well.
+
+This is especially important if lay individuals or scientists utilize generative AI with the aim of producing new knowledge and scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, there are likely to be limits to the kind of scientific knowledge obtainable.  For such limits I suspect that debates around structural realism will have important lessons which transfer over to the discussion about scientific discoveries from generative AI.
+
+For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  Can we evaluate such theories on the same footing as other human-derived theories?  Even though we know generative models might be prone to confabulation, but could a dialectical architecture mitigate that worry enough that we would be confident to commit resources to investigating such a theory?  Such commitment, to me, seems to contain a potential to introduce additional civilizational accumulative risk from AI.
+
+}
 
 %\noindent This document provides a brief overview of my research experience and associated projects in AI, both practical and theoretical.  I have emphasized where relevant to reinforcement learning and explanation.  I have attached some excerpts from my written work and some brief commentary where appropriate to explain technical points.  The full context is available in online repositories of my projects,  papers, and dissertation.  
 
@@ -211,7 +225,7 @@ In a preprint manuscript, Atoosa Kasirzadeh makes a very similar and related poi
 
 So, if we want to foster \emph{resilience}, it seems to me that we need to focus on making resilient individuals, since they are presumably the smallest ``unit'' or subsystem relevant to the coherent functioning of an interconnected global complex system.  The more resilient individuals, the more robust will be larger subsystems like local organizations and municipalities.
 
-Furthermore, it seems obvious that some networks of individuals (and associated institutions) are more influential and capable of being robust.  Namely, scientific networks and institutions.  These are the networks with individuals most likely to have developed critical thinking skills able to resist poor usage of AI models.  Unfortunately, the current trend looks poor, as scientists (with certain incentives) appear to be among the first and most frequent users of novel AI models, in particular generative language models.
+Furthermore, it seems obvious that some networks of individuals (and associated institutions) are more influential and capable of being robust.  Namely, scientific networks and institutions.  These are the networks with individuals most likely to have developed critical thinking skills able to resist poor usage of AI models.  Unfortunately, the current trend looks poor, as scientists (with certain incentives) appear to be among the first and most frequent users of novel AI models, in particular generative language models.  Specialized models (e.g. for predicting turbulent flow) are of a wholly different character from these language models, which affect the linguistic work flow of scientists in unprecedented ways.
 
 What philosophical views do scientists and developers have, and what epistemological assumptions do they make about AI models?  When one reads, for example, the scientific treatises of some of the smartest people of the twentieth century, there is an astonishing amount of philosophical sophistication.  Much of this has to do with the educational system in Germany and Austria.  But the point is that \emph{it is popular for scientists to forego the philosophy in favor of results and publication}.  The incentives make it so.
 
@@ -252,6 +266,10 @@ Ramsey sentences attempt to do without theoretical terms, so perhaps we could co
 
 See e.g. \citep[\S 26]{Carnap1966} 
 
+
+The recent launch of OpenAI's model Sora \citep{Sora2024} brought to light a question about the capability to imitate physics, and whether scene simulators in the future like Sora might be capable to do what traditionally is the domain of persistent 3D game engines and actual physical theories.  Obvious limitations, like in-persistent objects behind occlusions, indicate that a model like Sora does not have a physics world model which is comparable to a 3D game engine, where such persistence is trivially built in.  However, we can imagine a Sora-like model which overcomes many of the current drawbacks---even all of them.  In that case, what is the difference between a 3D game engine and Sora?  Would it even be worth rendering a 3D environment if all that mattered was the \emph{consistent appearance} of a scene?
+
+Consider a structural description of such a world. Would it differ from the structural description of a 3D rendered world? If for example all rotations of a scene were consistently rendered, and isomorphic to what a 3D engine environment produced, 
 
 
 
