added GANs ref, game theory stuff

--- a/MyBibliography1.bib
+++ b/MyBibliography1.bib
@@ -37,6 +37,16 @@
 
 
 
+@article{GANS2014,
+	archiveprefix = {arXiv},
+	author = {Ian J. Goodfellow and Jean Pouget-Abadie and Mehdi Mirza and Bing Xu and David Warde-Farley and Sherjil Ozair and Aaron Courville and Yoshua Bengio},
+	date-added = {2024-03-20 18:21:17 -0600},
+	date-modified = {2024-03-20 18:23:49 -0600},
+	eprint = {1406.2661},
+	primaryclass = {stat.ML},
+	title = {Generative Adversarial Networks},
+	year = {2014}}
+
 
 @book{OnLiberty1859,
 	author = {John Stuart Mill},
@@ -44,6 +54,19 @@
 	date-modified = {2024-03-17 14:34:16 -0600},
 	title = {On Liberty},
 	year = {1859}}
+
+
+
+@InCollection{sep-structural-realism,
+	author       =	{Ladyman, James},
+	title        =	{{Structural Realism}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta and Uri Nodelman},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2023/entries/structural-realism/}},
+	year         =	{2023},
+	edition      =	{{S}ummer 2023},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
 
 
 
