--- a/main.tex
+++ b/main.tex
@@ -124,7 +124,7 @@
 
 \setcounter{secnumdepth}{-2}
 
-\title{Generative AI in Scientific Discovery: \\ Research Plan and Experience}
+\title{Generative AI and Scientific Discovery: \\ Research Plan and Experience}
 \author{Cameron Beebe, Ph.D.}
 %\date{}							% Activate to display a given date or no date
 
@@ -134,21 +134,19 @@
 %\subsection{}
 
 
-\abstract{
 
-This research plan proposes to philosophically address and contextualize the current (and perhaps future) capability of generative artificial intelligence with respect to scientific discovery.  In particular, while acknowledging limited successes, I would like to focus on potential problems and limits to the use of generative models for scientific discovery.  Following the brief outline of the topics I will work on, I also lay out a proposed methodology and summarize my background which is suitable for successful research and publication on this topic.
 
-I begin by introducing recent ideas from Atoosa Kasirzadeh on accumulative risk as a starting point for conceptualizing the current state of AI in our civilization using complex systems theory.  I agree with her arguments, and consider that at the level of the individual, as well as the sub-systems of scientific networks, are the components of the global complex system most crucial to avoid accumulative risk in.  
+I plan to assess the capabilities of generative artificial intelligence for scientific discovery. While acknowledging successes, I focus on potential limits to the use of generative models for scientific discovery.  This research plan outlines the topics I would like to work on, lays out a methodology, and finally summarises my relevant background.
 
-With respect to the generative AI models themselves, I think philosophers should pay particular attention to what can be called \emph{dialectical architectures.}  There are strong reasons that such architectures may be able to meaningfully mitigate some of the widely acknowledged issues (e.g. bias, confabulation or hallucination, explainability and interpretability). In turn, mitigating these low level issues may also mitigate accumulative risk in the individual and scientific network components of AI use in our civilization.  
+%This research plan proposes to philosophically address and contextualize the current (and perhaps future) capability of generative artificial intelligence with respect to scientific discovery.  
 
-% Perhaps they can also help to encourage non-Oracle use of these models as well.
+%In particular,   Following the brief outline of the topics I will work on, I also lay out a proposed methodology and summarize my background which is suitable for successful research and publication on this topic.
 
-This is especially important if lay individuals or scientists utilize generative AI with the aim of producing new knowledge and scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, there are likely to be limits to the kind of scientific knowledge obtainable.  For such limits I suspect that debates around structural realism will have important lessons which transfer over to the discussion about scientific discoveries from generative AI.
+%I begin by introducing recent ideas from Atoosa Kasirzadeh on accumulative risk as a starting point for conceptualizing the current state of AI in our civilization using complex systems theory.  I agree with her arguments, and consider that at the level of the individual, as well as the sub-systems of scientific networks, are the components of the global complex system most crucial to avoid accumulative risk in.  
 
-For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  Can we evaluate such theories on the same footing as other human-derived theories?  Even though we know generative models might be prone to confabulation, but could a dialectical architecture mitigate that worry enough that we would be confident to commit resources to investigating such a theory?  Such commitment, to me, seems to contain a potential to introduce additional civilizational accumulative risk from AI.
 
-}
+
+
 
 %\noindent This document provides a brief overview of my research experience and associated projects in AI, both practical and theoretical.  I have emphasized where relevant to reinforcement learning and explanation.  I have attached some excerpts from my written work and some brief commentary where appropriate to explain technical points.  The full context is available in online repositories of my projects,  papers, and dissertation.  
 
@@ -165,6 +163,32 @@ For example, it seems that for certain contexts of discovery, a generative model
 \section{Generative AI in Science}
 
 
+\subsection{Introduction}
+
+Following Atoosa Kasirzadeh’s argument for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. I build on her arguments by considering both the level of the individual and sub-systems of scientific networks. I  argue that these are the most crucial components of civilization (seen as a complex system) where it is desirable to build resilience and avoid accumulative risk.
+
+With respect to the generative AI models themselves, I think philosophers should pay particular attention to what can be called \emph{dialectical architectures.}  There are strong reasons that such architectures may, when properly engineered, be able to meaningfully mitigate some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability). In turn, mitigating these low level issues may also help mitigate accumulative risk for individuals and in scientific networks.  
+
+% Perhaps they can also help to encourage non-Oracle use of these models as well.
+
+This is especially important when considering generative AI with the aim of generating scientific discoveries.  
+
+Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can be considered to ``live'' in a derivative ``world''.
+
+The ``intelligence'' of artificial systems is largely derived from learning structural representations of regularities in training data. We could call this ``artificial structural empiricism'': mathematical functions learn to cope with training data primarily by adjusting randomly initialized ``pre-theoretical'' weights.  This coping is parametric in a way that renders unobservable theoretical terms either redundant or obsolete.  
+
+(The ``upward path'' to structural realism from Psillos, see e.g. \citep[\S 3]{sep-structural-realism}.)
+
+For such limits I suspect that debates around structural realism will have important lessons which transfer over to the discussion about scientific discoveries from generative AI.  
+
+What can be called ``convergent realism'' concerns the debate surrounding whether science (as an iterative process) approaches true reference to real objects in the world---and whether this explains the success of science.  This is related to the No Miracles argument.  Structural realists, on the other hand, would argue that rather than reference to real objects it is reference to \emph{effective structures of relations between (potentially) real objects in the world which are empirically inaccessible or unobservable in practice or in principle.}.  What are we to think of the iterative process of artificial generative models with respect to potential new scientific discoveries? Even if we have a generative model engineered to have an arguably reliable dialectical architecture, what is the nature of the claims?  
+
+Can we evaluate such theories on the same footing as other human-derived theories?  Even though we know generative models might be prone to confabulation, but could a dialectical architecture mitigate that worry enough that we would be confident to commit resources to investigating such a theory?  Such commitment of resources would seem to contain the potential to introduce additional accumulative risk from AI into the components of the complex system of civilization we want to make most resilient.
+
+
+There are problems with structural realism, and theories formulated purely in structural terms (e.g. via Ramsey sentences).  Structural realism is not uncontroversially accepted, and it does not establish that there is \emph{not} a real (transcendentally ideal) world which exists as a progenitor for empirically accessible structures.  Isomorphisms are cheap, and many different worlds may correspond to the same structure.  [THIS IS WHAT DEMOPOULOS SAYS RIGHT?]
+
+%Furthermore, while two agents might converge on the same structure, the
 
 
 \subsection{Generative Confounds and the Trajectory of Science}
@@ -254,6 +278,8 @@ Rather, we should focus more on how humans interact with these models.  Turing T
 
 \subsection{Machine Epistemology, Scientific Discovery, and Ramsey Sentences}
 
+Generative models can create deep fakes and misinformation, but can the same mechanisms produce scientific discoveries?  What would justification look like for such discoveries?
+
 One area where generative models are increasingly being used is in the context of scientific discovery.  Is it possible that an AI model could learn a different structural representation of the world compared to a typical human biological neural net, and we won’t be able to tell?  If we are going to use artificial generative models in science, what is the epistemological character of apparently new scientific information which is derived from such models?  Assuming it is plausible to suppose some kind of a divide between empirical and theoretical terms, can new information derived from generative AI ever go beyond what philosophers of science call \emph{empirical structural realism}?
 
 A neural network model can learn "empirical" laws which generalize the model's ``environment''.  We can say that the model learns an effective bias. That environment is not the same as the one humans like you and I inhabit.   We might suppose, however, that the training data encodes sufficient similarities to our own world.  Sufficient for the model to learn essentially isomorphic empirical laws to our own reality.
@@ -316,6 +342,40 @@ I was not the first to note the similar structure of a GAN with the philosophica
 
 \subsection{Do Dialectical Architectures Solve Problems?}
 
+
+
+I think philosophers should pay particular attention to what can be called dialectical architectures.  Such architectures may, when properly engineered, be able to meaningfully mitigate some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability).
+
+By the term dialectical I mean to include several different yet related artificial neural network architectures.  I argue that the structures of these architectures embody certain cybernetic or control theory principles concerning information flow and feedback loops, which we can understand fairly straightforwardly from a birds eye view using the tools of abstract phase spaces, attractors, and simple control diagrams.  I argue that these structures also embody certain important philosophical principles which ground the thesis that dialectical AI models might represent a significant baseline for addressing many well known issues in machine learning and AI.
+
+We would like to engineer a mechanism or process which tends or approaches (perhaps even converge) a "less wrong" state.  In philosophy, many will have heard of the Socratic method, for example.  John Stuart Mill's On Liberty is a more recent example, where the process of open dialogue is more important than the actual state of truth.  In a slogan, we want a living truth, not a dead dogma.  I take this to mean that if we want to engineer veridical artificial systems we must prioritize engineering a robust process and not an efficient look up.  This is the difference between the Socratic method and consulting an Oracle.
+
+In general, we can call a structured dialogue between disagreeing interlocutors a dialectic.  The rigorous method of pitting neural networks against each other is, I argue, a method which may be a reliable way to mitigate errors and biases in an artificial system.  
+
+Generative Adversarial Networks (GANs) are an example of dialectical architectures.  GANs optimize sub-networks (generator vs. discriminator) against each other in what can be described as a ``minimax game''.  \citep{GANS2014}  The generator, once trained, tries to imitate genuine data well enough to pass it as genuine data through the discriminator. 
+
+In the case of images, GANs have been used to create so-called DeepFakes.  Obviously, in such a case, undesirable ethical problems are created rather than mitigated.  Reinforcement learning signals are directed towards optimizing the ability to impress (or fool) the discriminator.
+
+Similarly with LLMs, the RLHF signals are directed towards impressing a large population of humans, rather than towards a group of experts.  This makes confabulation a feature, not a bug.  However, I argue that the interesting results in the FunSearch paper represent innovation towards a dialectical architecture, where the confabulatory feature of LLMs is used in a structured interaction with other sub-components in a larger system.
+
+%We might expect that innovation on the simple GAN architecture could overcome 
+
+Following the characterization in \citep{GANS2014}, I argue that game theory will be a useful framework for innovating on neural network architectures which are beneficially dialectical.  Additional support is found in the early game theoretic characterizations of cybernetics from \cite{Ashby1958}.
+
+A dialectical architecture amounts to a game between components in a machine learning model.  I suspect that, if we are to engineer an artificial context of discovery, we would need to introduce some source of disturbance such that there is no stable equilibrium, and thus the players are forced to adapt dialectically towards a new attractor.  This disturbance could come from human interactions with the model.  [DOES THAT MAKE SENSE?]
+
+
+
+
+
+
+
+
+
+
+
+[ABOVE rewritten, remove redundant below]
+
 Dialectical models have the potential to mitigate many of the ethical and epistemological issues currently present in widely used generative models.   By the term  \emph{dialectical} I mean to include several different yet related kinds of artificial neural network architectures, where the architectures have a certain kind of structure (or cluster of related structures).  These structures embody certain cybernetic or control theory principles concerning information flow and feedback loops, which we can understand fairly straightforwardly from a birds eye view using the tools of abstract phase spaces, attractors, and simple control diagrams.  
 
 Crucially, I argue that these structures also embody certain important philosophical principles which ground the thesis that dialectical AI models might represent a significant baseline for addressing many well known issues in machine learning and AI.  Consider the following list of desiderata:
@@ -329,7 +389,10 @@ Crucially, I argue that these structures also embody certain important philosoph
 \end{itemize}
 
 Current widespread LLMs, for example, have trouble with these basic requirements, not to mention other nuanced issues with confabulations, safety, and other ``fallacies'' which might derive from the above.  How might one design an alternative internal architecture (mathematical functions and computational mechanisms) capable of systematically protecting against such issues?  
-Consider the architecture of what is called a \textbf{generative adversarial network}, or GAN.  GANs consist of two sub-networks which iteratively interact with each other such that the ``learned'' structure of each sub-net is specialized.  One sub-net, called a \emph{generator} $G$, tries to fool the other sub-net (which we call a \emph{discriminator} $D$) by iteratively generating a data example which ideally could be from the same distribution as the original training data set.  For example, in the case of a set of images, $G$ would (again, \emph{ideally}) learn how to generate an image such that $D$ would be ``fooled''.  Such an architecture can also be thought of as a two-player game, and more details can be found in the original paper .
+
+%Dialectical models should be used dialectically.  In order to do so, the interlocutors must be on a similar leve
+
+Consider the architecture of what is called a \textbf{generative adversarial network}, or GAN.  GANs consist of two sub-networks which iteratively interact with each other such that the ``learned'' structure of each sub-net is specialized.  One sub-net, called a \emph{generator} $G$, tries to fool the other sub-net (which we call a \emph{discriminator} $D$) by iteratively generating a data example which ideally could be from the same distribution as the original training data set.  For example, in the case of a set of images, $G$ would (again, \emph{ideally}) learn how to generate an image such that $D$ would be ``fooled''.  Such an architecture can also be thought of as a two-player game, and more details can be found in the original paper .  \citep{}
 
 
 At this point I'm sure many philosophers might already find it understandable why it might make sense to refer to such an architecture as ``dialectical''.  Alas, as far as I can tell, such a connection was first described in a technical paper.
@@ -823,7 +886,7 @@ which was implied by our list of desiderata above.  Formula \ref{eq:contourconfi
 
 \noindent Cray, now part of Hewlett Packard Enterprise,  manufactures supercomputers (putting together racks, cabinets, interconnects). They also provide high performance software to help customers like national scientific labs deploy jobs onto petascale and exascale compute clusters. \\
 
-\noindent I worked with Cray's Distributed Deep Learning Plugin team. The plugin is a simple wrapper to modify python machine learning scripts to work across GPU clusters, using MPI (e.g. AllReduce) to communicate gradients between threads and average them.  I applied, tested, and experimented with the Plugin across multiple GPUs (gradient averaging using MPI), on a variety of ANN architectures including: LSTM, CNN, CapsNet, and Deep RL/DQN.  The latter was the most sophisticated, and should have been prioritized since I ended up running out of time in the internship before the plugin was functional on a deep reinforcement learning model. \\
+\noindent I worked with Cray's Distributed Deep Learning Plugin team. The plugin is a simple wrapper to modify python machine learning scripts to work across GPU clusters, using Message Passing Interface (MPI) (e.g. AllReduce) to communicate gradients between threads and average them.  I applied, tested, and experimented with the Plugin across multiple GPUs (gradient averaging using MPI), on a variety of ANN architectures including: LSTM, CNN, CapsNet, and Deep RL/DQN.  The latter was the most sophisticated, and should have been prioritized since I ended up running out of time in the internship before the plugin was functional on a deep reinforcement learning model. \\
 
 \noindent \textbf{What I Used:} Python, Jupyter, Slurm, SSH onto \faLinux \  Linux GPU clusters, Keras, Anaconda, Bash, Git.  I mainly used Keras, scheduled jobs via Slurm, managed ML/DL packages and versions with Anaconda and pip, and committed code to internal git repos. \\
 
